--- a/day1/javascript1.html
+++ b/day1/javascript1.html
@@ -9,7 +9,8 @@
     <div class = "container">
     <div class="vertical-center">
         <h2>Why Sherlock Holmes is the Best Fictional Character</h2>
-        <p id = "_p">
+        <h5 id = "_p"></p>
+        <h5 id = "_h5"></h5>
         <ul>
             <li>He helps others with their problems—even with no intention of financial gain on his part!</li>
             <li>He has appreciation for the arts: he plays violin, attends concerts, and frequently dresses up in a variety of costumes</li>
@@ -20,6 +21,10 @@
         </p>
         <label>What's your favorite book?</label>
         <input id = "_text"><br><br>
+        <label>How many books do you want to read this year?</label>
+        <input id="_howMany"><br><br>
+        <label>How many have you actually read this year?</label>
+        <input id="_read"><br><br>
         <button id ="_submit">submit</button>
     </div>
 </div>
