--- a/day3/bingo.html
+++ b/day3/bingo.html
@@ -4,41 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" href="bingo.css"> 
     <title>Bingo</title>
-    <link rel="stylesheet" href="bingo.css">
 </head>
 <body>
     <div id="gameContainer">
     <h1>Bingo</h1>
     <div id = "cellContainer">
-        <div cellIndex = "0" class = "cell">55</div>
-        <div cellIndex = "1" class = "cell">99</div>
-        <div cellIndex = "2" class = "cell">4</div>
-        <div cellIndex = "3" class = "cell">7</div>
-        <div cellIndex = "4" class = "cell">8</div>
-        <div cellIndex = "5" class = "cell">9</div>
-        <div cellIndex = "6" class = "cell">33</div>
-        <div cellIndex = "7" class = "cell">21</div>
-        <div cellIndex = "8" class = "cell">20</div>
-        <div cellIndex = "9" class = "cell">15</div>
-        <div cellIndex = "10" class = "cell">3</div>
-        <div cellIndex = "11" class = "cell">66</div>
-        <div cellIndex = "12" class = "cell">93</div>
-        <div cellIndex = "13" class = "cell">82</div>
-        <div cellIndex = "14" class = "cell">84</div>
-        <div cellIndex = "15" class = "cell">2</div>
-        <div cellIndex = "16" class = "cell">3</div>
-        <div cellIndex = "17" class = "cell">5</div>
-        <div cellIndex = "18" class = "cell">73</div>
-        <div cellIndex = "19" class = "cell">67</div>
-        <div cellIndex = "20" class = "cell">52</div>
-        <div cellIndex = "21" class = "cell">34</div>
-        <div cellIndex = "22" class = "cell">31</div>
-        <div cellIndex = "23" class = "cell">10</div>
-        <div cellIndex = "24" class = "cell">50</div>
+        <div cellIndex = "0" class = "cell"><p id = _55>55</p></div>
+        <div cellIndex = "1" class = "cell"><p id = _99>99</p></div>
+        <div cellIndex = "2" class = "cell"><p id = _4>4</p></div>
+        <div cellIndex = "3" class = "cell"><p id = _7>7</p></div>
+        <div cellIndex = "4" class = "cell"><p id = _8>8</p></div>
+        <div cellIndex = "5" class = "cell"><p id = _9>9</p></div>
+        <div cellIndex = "6" class = "cell"><p id = _33>33</p></div>
+        <div cellIndex = "7" class = "cell"><p id = _21>21</p></div>
+        <div cellIndex = "8" class = "cell"><p id = _20>20</p></div>
+        <div cellIndex = "9" class = "cell"><p id = _15>15</p></div>
+        <div cellIndex = "10" class = "cell"><p id = _3>3</p></div>
+        <div cellIndex = "11" class = "cell"><p id = _66>66</p></div>
+        <div cellIndex = "12" class = "cell"><p id = _93>93</p></div>
+        <div cellIndex = "13" class = "cell"><p id = _82>82</p></div>
+        <div cellIndex = "14" class = "cell"><p id= _84>84</p></div>
+        <div cellIndex = "15" class = "cell"><p id = _2>2</p></div>
+        <div cellIndex = "16" class = "cell"><p if = _38>38</p></div>
+        <div cellIndex = "17" class = "cell"><p id = _5>5</p></div>
+        <div cellIndex = "18" class = "cell"><p id = _73>73</p></div>
+        <div cellIndex = "19" class = "cell"><p id = _67>67</p></div>
+        <div cellIndex = "20" class = "cell"><p id = _52>52</p></div>
+        <div cellIndex = "21" class = "cell"><p id = _34>34</p></div>
+        <div cellIndex = "22" class = "cell"><p id = _31>31</p></div>
+        <div cellIndex = "23" class = "cell"><p id = _10>10</p></div>
+        <div cellIndex = "24" class = "cell"><p id = _50>50</p></div>
 
     </div>
-    <h2 id = "statusText"></h2>
     <label id="btn"></label><br><br>
     <button id = "new_round" class = button>New Round</button>
     </div>
